took off fixed height off screenshot

--- a/style.css
+++ b/style.css
@@ -145,7 +145,6 @@ i {
 
 
 .screenshot {
-    height: 400px;
     width: 100%;
     transition: transform .2s; /* Animation */
 }
@@ -209,7 +208,7 @@ main h2 {
     }
 
     .screenshot {
-        height: 225px;
+        width: 95%;
     }
 
     #bioImg {
